ts-exporter/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ts-exporter
spec:
  selector:
    app: ts-exporter
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
