ts-exporter/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-exporter
  annotations:
    cert-manager.io/cluster-issuer: issuer-infisical
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ts-exporter-null.k8s.moody
      secretName: headlamp-tls

  rules:
    - host: ts-exporter-null.k8s.moody
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ts-exporter
                port:
                  number: 5000
